# solabot_rpi

./: CMakeLists.txt  README.md  package.xml
cfg/: decode_vel_serial_out.cfg
launch/: colabot_pi.launch  colabot_pi_cmd_vel.launch  colabot_pi_one_car.launch  one_lidar.launch  solabot_pi.launch  two_lidar.launch
launch/includes/: tf.xml  tf_car1.xml  tf_car2.xml  tf_one_lidar.xml  urg.xml
params/: my_razor.yaml
scripts/: decode_serial.py
